--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: imadmedjerab
 logo: assets/img/imadfb.jpg
-#description: text below image
+description: "DATA SCIENCE, IA"
 show_downloads: true
 theme: jekyll-theme-minimal
