--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-title: "imadmedjerab"
-logo: "assets/img/imad.jpg"
+title: "Medjerab Imad"
+logo: ‎assets/img/imad.jpg
+description: "Portfolio Data Scientist - IA"
+show_downloads: true
 theme: jekyll-theme-minimal
+lang: fr
