--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: "Medjerab Imad"
 description: "Portfolio Data Scientist - IA"
 theme: jekyll-theme-minimal
 logo: ‎assets/img/immad.jpg
+logo_width: 200
