--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: "Medjerab Imad"
 description: "Portfolio Data Scientist - IA"
 theme: jekyll-theme-minimal
-logo: ‎assets/img/immad.jpg
+
+logo: assets/img/immad.jpg   
 logo_width: 200
+show_downloads: true
