--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: "Medjerab Imad"
+logo: assets/img/immad.png
+logo_width: 200
 description: "Portfolio Data Scientist - IA"
 theme: jekyll-theme-minimal
 
